--- a/style.css
+++ b/style.css
@@ -11,7 +11,7 @@ html{
 
 
 .navbar{
-    background-color: #fdf9f9d9;
+    background-color: #ffffff;
     /* background-image: linear-gradient(147deg, #000000 0%, #434343 74%) !important; */
      backdrop-filter: blur(50px) !important;   
     overflow: hidden;
@@ -210,6 +210,232 @@ html{
 .Menu{
     overflow: hidden;
 }
+
+/* <<<<<<<<<<<<<,Menu part>>>>>>>>>> */
+
+.menuu{
+    margin:  20px 0;
+     outline: none;
+    position: relative;
+     z-index: 1;
+    box-shadow: 0px 1px 2px rgba(0,255,255,0.5), 
+    0px 2px 4px rgba(46, 47, 47, 0.5), 
+    0px 4px 8px rgba(39, 40, 40, 0.5), 
+    0px 8px 16px rgba(20, 30, 30, 0.796);   
+    cursor: pointer;
+    
+
+}
+
+.menuu h1{
+    font-size: 34px;
+    text-align: center;
+    transition: 0.5s all;
+    color: rgb(78,48,5);
+    font-weight: 800;
+    margin: 0 10px 10px 0;
+    transition: all o.5 ease-in-out;
+
+}
+
+.menuu:hover h1,.detail:hover p{
+    color: rgba(220, 133, 11, 0.756);
+
+}
+
+.menuu a{
+    margin-top: 40px;
+    margin-left: 40px;
+    width: 60%;
+    
+    text-decoration: none;
+    text-transform: uppercase;
+    color: #fff;
+    background-color: #e8b40ab5;
+    backdrop-filter: blur(10px);
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    font-size: 13px;
+    padding: 9px 18px;
+    /* border: 3px solid white; */
+    border-radius: 6px;
+    transition: 0.5s all;
+}
+.menuu a:hover{
+    background-color: rgba(233, 237, 11, 0.748);
+    color: black;
+    font-weight: 600;
+    text-decoration: underline;
+    transform: translateX(30px);
+}
+
+.menuu ul li{
+    font-size: 14px;
+}
+
+
+
+/* <<<<<<<<<<<Contact>>>> */
+.container{
+    width: 85%;
+     padding: 30px 60px  20px 40px ;
+       opacity: 0.9;
+  }
+  .container .content{
+    display: flex;
+    align-items: center;
+    
+    justify-content: space-between;
+    
+  }
+  .container .content .left-side{
+    width: 25%;
+    color: rgb(214, 12, 12) !important;
+    height: 100%;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    margin-top: 15px;
+    position: relative;
+  }
+  .content .left-side::before{
+    content: '';
+    position: absolute;
+    height: 80%;
+    width: 2px;
+    right: -15px;
+    top: 50%;
+    transform: translateY(-50%);
+    background: #818183;
+  }
+  .content .left-side .details{
+    margin: 14px;
+    
+    text-align: center;
+  }
+  .content .left-side .details i{
+    font-size: 30px;
+    color: rgb(133, 91, 6);
+    margin-bottom: 10px;
+    
+  }
+  .content .left-side .details .topic{
+    font-size: 18px;
+    font-weight: 500;
+    color: rgb(39, 38, 36);
+  }
+  .content .left-side .details .text-one,
+  .content .left-side .details .text-two{
+    font-size: 14px;  
+    color: #583302;
+  }
+  .container .content .right-side{
+    width: 75%;
+    margin-left: 75px;
+  
+   
+    color: rgb(13, 10, 10);
+  }
+  .content .right-side .topic-text{
+    font-size: 23px;
+    font-weight: 900;
+    color: #bc1300c4;
+    
+  }
+  .right-side .input-box{
+    height: 50px;
+    width: 100%;
+     margin: 12px 0;
+  }
+  .right-side .input-box input,
+  .right-side .input-box textarea{
+    height: 100%;
+    width: 100%;
+    border: 2px solid rgb(196, 181, 18);
+    color: #674805;
+    outline: none;
+    font-size: 16px;
+    background: #ece6e6;
+   
+    border-radius: 14px;
+    padding: 0 15px;
+    resize: none;
+  }
+  ::placeholder{
+    color: rgb(107, 45, 4);
+  
+  }
+  .right-side .message-box{
+    min-height: 110px;
+  }
+  .right-side .input-box textarea{
+    padding-top: 6px;
+  }
+  .right-side .button{
+    display: inline-block;
+    margin-top: 12px;
+  }
+  .right-side .button button[type="submit"]{
+    color: #000000;
+    font-weight: bold;
+    font-size: 18px;
+    outline: none;
+    border: none;
+    padding: 8px 16px;
+    border-radius: 6px;
+    background:rgb(239, 215, 83);
+    cursor: pointer;
+    transition: all 0.4s ease-in-out;
+  }
+  .button button[type="submit"]:hover{
+     
+      color: rgb(252, 249, 249);
+      font-weight: bold;
+  }
+  
+  .button button[type="submit"]:active{
+  
+  background-color: rgb(1, 1, 1);
+  
+      
+  }
+  
+  @media (max-width:950px) {
+    .container{
+      width: 100%;
+      padding: 30px px 40px 35px ;
+    }
+    .container .content .right-side{
+     width: 75%;
+     margin-left: 55px;
+  }
+  }
+  @media (max-width: 820px) {
+    .container{
+      margin: 40px 0;
+      height: 100%;
+    }
+    .container .content{
+      flex-direction: column-reverse;
+    }
+   .container .content .left-side{
+     width: 100%;
+     flex-direction: row;
+     margin-top: 40px;
+     justify-content: center;
+     flex-wrap: wrap;
+   }
+   .container .content .left-side::before{
+     display: none;
+   }
+   .container .content .right-side{
+     width: 100%;
+     margin-left: 0;
+   }
+  }
+  
 
 
 
