--- a/style.css
+++ b/style.css
@@ -9,11 +9,20 @@ html{
 }
 
 
-
+#modedarki{
+  background-color: rgb(182, 133, 11);
+  width: 30px;
+  height: 30px;
+  border-radius: 50%;
+  text-align: center;
+}
+i:hover{
+  color: rgb(244, 248, 6);
+}
 .navbar{
-    background-color: #ffffff;
+    background-color: #f5f0f0;
     /* background-image: linear-gradient(147deg, #000000 0%, #434343 74%) !important; */
-     backdrop-filter: blur(50px) !important;   
+     /* backdrop-filter: blur(50px) !important;    */
     overflow: hidden;
       box-shadow: 0px 1px 2px rgba(78,48,5,0.5), 
       0px 2px 4px rgba(78,48,5,0.5), 
@@ -207,7 +216,7 @@ html{
     /* background-color: rgba(159, 213, 234, 0.353); */
     z-index: 1;
     /* box-shadow: 0 0 10px gray; */
-    box-shadow: 0px 1px 2px rgba(19, 26, 26, 0.5), 
+    box-shadow: 0px 1px 2px rgba(254, 229, 3, 0.842), 
     0px 2px 4px rgba(46, 47, 47, 0.5), 
     0px 4px 8px rgba(39, 40, 40, 0.5), 
     0px 8px 16px rgba(20, 30, 30, 0.796);
@@ -228,7 +237,8 @@ html{
      outline: none;
     position: relative;
      z-index: 1;
-    box-shadow: 0px 1px 2px rgba(0,255,255,0.5), 
+    /* box-shadow: 0px 1px 2px rgba(0,255,255,0.5),  */
+    box-shadow: 0px 1px 2px rgba(254, 229, 3, 0.842), 
     0px 2px 4px rgba(46, 47, 47, 0.5), 
     0px 4px 8px rgba(39, 40, 40, 0.5), 
     0px 8px 16px rgba(20, 30, 30, 0.796);   
@@ -454,7 +464,8 @@ html{
 
     position: relative;
      z-index: 1;
-    box-shadow: 0px 1px 2px rgba(24, 25, 25, 0.5), 
+    /* box-shadow: 0px 1px 2px rgba(24, 25, 25, 0.5),  */
+    box-shadow: 0px 1px 2px rgba(254, 229, 3, 0.842), 
     0px 2px 4px rgba(46, 47, 47, 0.5), 
     0px 4px 8px rgba(39, 40, 40, 0.5), 
     0px 8px 16px rgba(20, 30, 30, 0.796);   
