--- a/style.css
+++ b/style.css
@@ -6,6 +6,7 @@
 }
 html{
     scroll-behavior: smooth;
+    scrollbar-color: auto | dark | light | <color>;
 }
 
 
@@ -20,7 +21,7 @@ i:hover{
   color: rgb(244, 248, 6);
 }
 .navbar{
-    background-color: #f5f0f0;
+    background-color: #fff;
     /* background-image: linear-gradient(147deg, #000000 0%, #434343 74%) !important; */
      /* backdrop-filter: blur(50px) !important;    */
     overflow: hidden;
@@ -265,7 +266,7 @@ i:hover{
 
 .menuu a{
     margin-top: 40px;
-    margin-left: 40px;
+    margin-left: 60px;
     width: 60%;
     
     text-decoration: none;
@@ -294,6 +295,36 @@ i:hover{
     font-size: 14px;
 }
 
+.Poopup{
+  /* background-color: red; */
+  /* border: 1px groove lightgrey; */
+  width: 100%;
+  height: auto;
+  text-align: center;
+  /* border-radius: 10px; */
+  /* box-shadow: 0px 1px 2px rgba(106, 77, 35, 0.5),  */
+  /* 0px 2px 4px rgba(106, 78, 40, 0.5),  */
+  /* 0px 4px 8px rgba(79, 60, 33, 0.5),  */
+  /* 0px 8px 16px rgba(84, 64, 36, 0.5); */
+ 
+}
+.Poopup h4{
+  background-color: rgb(78,48,5);
+  color: white;
+  
+  font-weight: 900;
+  letter-spacing: 10px;
+}
+
+
+.Poopup select{
+  /* background-color: orange; */
+  outline: none;
+  /* border: 1px groove lightgrey; */
+  padding: 10px;
+  margin: 10px;
+  border-radius: 6px;
+}
 
 
 /* <<<<<<<<<<<Contact>>>> */
